[gd_scene load_steps=9 format=3 uid="uid://b7shrt87ucxid"]

[ext_resource type="Script" uid="uid://jgttep14pyof" path="res://Scripts/System/main.gd" id="1_qf4ax"]
[ext_resource type="Script" uid="uid://x3j2ftwe2pi1" path="res://Scripts/Map/map_camera_controller.gd" id="2_k7gy6"]
[ext_resource type="Script" uid="uid://bccf6gvv1urtr" path="res://Scripts/UI/convoy_label_manager.gd" id="3_t5xx3"]
[ext_resource type="TileSet" uid="uid://dm10x6qv8kfpv" path="res://Assets/tiles/tile_set.tres" id="3_vvi3b"]
[ext_resource type="Script" uid="uid://qi45fv401eyn" path="res://Scripts/Map/map_interaction_manager.gd" id="4_b4rp0"]
[ext_resource type="Script" uid="uid://crk2s2urriwrg" path="res://Scripts/System/game_timers.gd" id="5_b5irg"]
[ext_resource type="Script" uid="uid://fqyn0cfdc0rs" path="res://Scripts/Map/convoy_visuals_manager.gd" id="8_hvyeg"]

[sub_resource type="ViewportTexture" id="ViewportTexture_k7gy6"]
viewport_path = NodePath("MapContainer/SubViewport")

[node name="MapRender" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qf4ax")
convoy_focus_zoom_target_tiles_wide = 10.0
convoy_menu_map_view_offset_percentage = 1.0
convoy_focus_zoom_target_tiles_high = 7.0

[node name="MapContainer" type="Node2D" parent="."]

[node name="MapDisplay" type="TextureRect" parent="MapContainer"]
texture_filter = 4
mouse_filter = 2
texture = SubResource("ViewportTexture_k7gy6")
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="SettlementLabelContainer" type="Node2D" parent="MapContainer"]

[node name="ConvoyLabelContainer" type="Node2D" parent="MapContainer"]
script = ExtResource("3_t5xx3")

[node name="ConvoyConnectorLinesContainer" type="Node2D" parent="MapContainer"]

[node name="SubViewport" type="SubViewport" parent="MapContainer"]
size = Vector2i(2650, 1790)

[node name="TerrainTileMap" type="TileMapLayer" parent="MapContainer/SubViewport"]
tile_set = ExtResource("3_vvi3b")

[node name="MapCamera" type="Camera2D" parent="MapContainer/SubViewport"]

[node name="MapInteractionManager" type="Node" parent="."]
script = ExtResource("4_b4rp0")

[node name="MapCameraController" type="Node" parent="MapInteractionManager"]
script = ExtResource("2_k7gy6")

[node name="GameTimersNode" type="Node" parent="."]
script = ExtResource("5_b5irg")

[node name="ConvoyVisualsManager" type="Node" parent="."]
script = ExtResource("8_hvyeg")
